@@ -1,0 +1,55 @@
+<?php
+/**
+ * @version		$Id$
+ * @copyright	Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+class JDateTest extends PHPUnit_Framework_TestCase
+{
+	public function setUp()
+	{
+		jimport('joomla.utilities.date');
+	}
+
+	function tearDown()
+	{
+	}
+
+	public function testConstruct()
+	{
+		$date = new JDate;
+
+		$this->markTestIncomplete();
+	}
+
+	public function testGetSetOffset()
+	{
+		$this->markTestIncomplete();
+	}
+
+	public function testToFormat()
+	{
+		$this->markTestIncomplete();
+	}
+
+	public function testToISO8601()
+	{
+		$this->markTestIncomplete();
+	}
+
+	public function testToMySQL()
+	{
+		$this->markTestIncomplete();
+	}
+
+	public function testToRFC822()
+	{
+		$this->markTestIncomplete();
+	}
+
+	public function testToUnix()
+	{
+		$this->markTestIncomplete();
+	}
+}
