@@ -30,6 +30,7 @@ $ -> Language fix or change
 08-Oct-2009 Andrew Eddie
 ^ Added checks for new UTC date filters in testFilter test.
 ^ Changed JControllerForm tests to Hamcrest style.
++ Add skeleton for JDate tests.
 
 07-Oct-2009 Andrew Eddie
 + Added JForm tests.
